[gd_scene load_steps=3 format=2]

[ext_resource path="res://src/Components/HitEffect.tscn" type="PackedScene" id=1]
[ext_resource path="res://src/Components/Hurtbox.gd" type="Script" id=2]

[node name="Hurtbox" type="Area2D"]
collision_layer = 0
collision_mask = 0
script = ExtResource( 2 )
hit_effect_scene = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]

[node name="Timer" type="Timer" parent="."]
[connection signal="invivibility_ended" from="." to="." method="_on_Hurtbox_invivibility_ended"]
[connection signal="invivibility_started" from="." to="." method="_on_Hurtbox_invivibility_started"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
